samples/_failures_safe/1761654748_42a27a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2d37114.c:143: error: expected ‘;’, ‘,’ or ‘)’ at end of input
